// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auto-approve all users 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: auto-approve
on:
  pull_request_target:
    types:
      - labeled
      - opened
      - synchronize
      - reopened
      - ready_for_review
jobs:
  approve:
    runs-on: ubuntu-latest
    permissions:
      pull-requests: write
    if: contains(github.event.pull_request.labels.*.name, 'auto-approve')
    steps:
      - uses: hmarr/auto-approve-action@v2.2.1
        with:
          github-token: \${{ secrets.MY_SECRET }}
"
`;

exports[`auto-approve configure options 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: auto-approve
on:
  pull_request_target:
    types:
      - labeled
      - opened
      - synchronize
      - reopened
      - ready_for_review
jobs:
  approve:
    runs-on: ubuntu-latest
    permissions:
      pull-requests: write
    if: contains(github.event.pull_request.labels.*.name, 'my-approve') && (github.event.pull_request.user.login == 'bot-1' || github.event.pull_request.user.login == 'bot-2')
    steps:
      - uses: hmarr/auto-approve-action@v2.2.1
        with:
          github-token: \${{ secrets.MY_SECRET }}
"
`;

exports[`auto-approve default 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: auto-approve
on:
  pull_request_target:
    types:
      - labeled
      - opened
      - synchronize
      - reopened
      - ready_for_review
jobs:
  approve:
    runs-on: ubuntu-latest
    permissions:
      pull-requests: write
    if: contains(github.event.pull_request.labels.*.name, 'auto-approve') && (github.event.pull_request.user.login == 'github-actions[bot]')
    steps:
      - uses: hmarr/auto-approve-action@v2.2.1
        with:
          github-token: \${{ secrets.GITHUB_TOKEN }}
"
`;

exports[`auto-approve default with projenCredentials.fromApp 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: auto-approve
on:
  pull_request_target:
    types:
      - labeled
      - opened
      - synchronize
      - reopened
      - ready_for_review
jobs:
  approve:
    runs-on: ubuntu-latest
    permissions:
      pull-requests: write
    if: contains(github.event.pull_request.labels.*.name, 'auto-approve') && (github.event.pull_request.user.login == 'github-actions[bot]')
    steps:
      - name: Generate token
        id: generate_token
        uses: tibdex/github-app-token@7ce9ffdcdeb2ba82b01b51d6584a6a85872336d4
        with:
          app_id: \${{ secrets.PROJEN_APP_ID }}
          private_key: \${{ secrets.PROJEN_APP_PRIVATE_KEY }}
      - uses: hmarr/auto-approve-action@v2.2.1
        with:
          github-token: \${{ steps.generate_token.outputs.token }}
"
`;
